# automated-software-engineering-team

./: .dockerignore  .env.example  .gitignore  .npmrc  .prettierignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/engine/: .dockerignore  alembic.ini  package.json  pyproject.toml
apps/engine/scripts/: eval_agent_team.py  eval_retrieval.py
apps/engine/src/engine/: auth.py  backup.py  backup_remote.py  benchmark.py  config.py  evaluation.py  github.py  jobs.py  logging.py  main.py  observability.py  openapi_export.py  ratelimit.py  reporting.py  retrieval_eval.py  serve.py  worker.py
apps/engine/src/engine/agents/: chat_graph.py  engineer.py  loop.py  pr_reviewer.py  qa.py  (+9 more)
apps/engine/tests/: conftest.py  prompt_snapshots.json  test_agent_reasoning.py  test_agent_registry.py  test_agent_runtime_models.py  test_agent_tools.py  test_auth.py  test_backup.py  test_backup_remote.py  test_benchmark.py  test_chat.py  test_chat_grounding.py  test_clone_guard.py  test_conversations.py  test_crypto_key_warning.py  test_dependency_gate.py  test_dependency_graph.py  test_dependency_scanner.py  test_documents.py  test_engineer.py  test_evaluation.py  test_health.py  test_indexing.py  test_integrations.py  test_jail.py  test_knowledge.py  test_model_router.py  test_observability.py  test_org_sharing.py  test_plan_insights.py  test_pr_reviewer.py  test_product_manager.py  test_prompt_snapshots.py  test_provider_keys.py  test_qa_loop.py  test_ratelimit.py  test_reporting.py  test_retrieval.py  test_reviewer.py  test_route_auth_sweep.py  (+18 more)
(+277 files in other folders)
